--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	},
 	"dependencies": {
 		"@googleapis/calendar": "^1.0.2",
-		"@googleapis/people": "^1.0.3"
+		"@googleapis/people": "^1.0.3",
+		"@popperjs/core": "^2.11.6"
 	}
 }
